Bug Fix: Fix issue where logout, signup, & login form sections overlapped on smaller screens horizontally. Fixed with Media Querys. - Designed Sign up page added new hero image - Moved you are logged in as user paragraph to the top of home and journal pages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,6 +128,24 @@ background-image: linear-gradient(225deg, #e8e8e8 0%, #966c6e 33%, #605e5e 66%, 
     background-size: cover;
 }
 
+#sign_up {
+    height:100vh;
+    position:relative;
+    isolation: isolate;
+}
+
+#sign_up ::after {
+    content:"";
+    position: absolute;
+    inset:0;
+    z-index:-1;
+    opacity: .2;
+    filter:brightness(0.4);
+    
+    background: url(/static/css/img/sign_up_hero.jpg) no-repeat center center fixed;
+    background-size: cover;
+}
+
 
 @media (max-width: 752px){
 .line {
@@ -135,5 +153,32 @@ background-image: linear-gradient(225deg, #e8e8e8 0%, #966c6e 33%, #605e5e 66%, 
 }
 }
 
+
+@media (max-height: 780px){
+    #start {
+        height:auto;
+    }
+
+    #login {
+        height:80vh;
+    }
+
+    #logout {
+        height:80vh;
+    }
+
+    #sign_up {
+        height:auto;
+    }
+
+   
+    }
+
+    @media (max-height: 420px){
+        #login {
+            height:auto;
+        }
+    }
+    
 
 
